fonction age ajoutée

--- a/templates/employe/show.html.twig
+++ b/templates/employe/show.html.twig
@@ -6,6 +6,10 @@
 {% block body %}
 	<h1>{{ employe }}</h1>
 	<p>
+		Ville :
 		{{ employe.ville }}
+		<br>
+		Entreprise :
+		{{ }}
 	</p>
 {% endblock %}
