--- a/templates/employe/add.html.twig
+++ b/templates/employe/add.html.twig
@@ -6,4 +6,5 @@
 {% block body %}
 	<h1>Ajouter un Employé</h1>
 
-	{{ form(formAddEmploye) }}{% endblock %}
+	{{ form(formAddEmploye) }}
+{% endblock %}
