--- a/templates/employe/index.html.twig
+++ b/templates/employe/index.html.twig
@@ -6,6 +6,7 @@
 {% block body %}
 
 	<h1>Liste des Employés</h1>
+		<a href="{{ path('add_employe') }}">Ajouter un Employé</a><br>
 
 	{% for employe in employes %}
 		<a href="{{ path('show_employe', {'id': employe.id}) }}">{{ employe }}</a><br>
