--- a/templates/entreprise/index.html.twig
+++ b/templates/entreprise/index.html.twig
@@ -9,7 +9,7 @@
 	{% for entreprise in entreprises %}
 		<a href="{{ path('show_entreprise', {'id': entreprise.id}) }}">{{ entreprise }}</a><br>
 		<a href="{{ path('edit_entreprise', {'id': entreprise.id}) }}">Editer</a><br>
-
+		<a href="{{ path('delete_entreprise', {'id': entreprise.id}) }}">Delete</a><br>
 	{% endfor %}
 
 {% endblock %}
